fixed weird button alignment on order

--- a/css/order.css
+++ b/css/order.css
@@ -7,7 +7,7 @@ button {
     font-size: 15px;
     font-weight: bold;
     padding: 10px 10px;
-    margin-left: 40px;
+    margin-left: 20px;
     cursor: pointer;
   }
   
